--- a/rami/src/index.css
+++ b/rami/src/index.css
@@ -106,6 +106,10 @@ button:focus-visible {
   padding: 60px 0;
 }
 
+.footer-underline {
+  display: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
