--- a/rami/src/pages/Home/Home.css
+++ b/rami/src/pages/Home/Home.css
@@ -32,15 +32,6 @@
   padding: 60px 0;
 }
 
-.facilities{
-  background-color: white;
-
-}
-
-.facilities-container{
-  background-color: white;
-}
-
 .intro .container, .quote-section .container, .research-profile .container, .facilities .container, .tour .container, .contact .container {
   max-width: 1300px;
   padding: 0 20px;
@@ -48,6 +39,7 @@
 }
 
 .quote-section {
+  background-color: #fddde6; /* Pastel pink background */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,9 +51,9 @@
   align-items: center;
   max-width: 800px;
   padding: 40px;
-  background-color: #fddde6; /* Pastel pink background */
-  border-radius: 8px; /* Rounded corners */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for a 3D effect */
+  background-color: #fff; /* White background for the box */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .profile-img {
@@ -155,6 +147,27 @@
   color: #a9a9a9;
 }
 
+.slick-prev, .slick-next {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.slick-prev:before, .slick-next:before {
+  font-size: 20px;
+  color: white;
+}
+
+.slick-prev {
+  left: -60px;
+}
+
+.slick-next {
+  right: -60px;
+}
+
 @media (max-width: 768px) {
   .hero-content h1 {
     font-size: 2rem;
@@ -175,5 +188,22 @@
 
   .quote-author {
     font-size: 0.875rem;
+  }
+
+  .slick-prev, .slick-next {
+    width: 30px;
+    height: 30px;
+  }
+
+  .slick-prev:before, .slick-next:before {
+    font-size: 15px;
+  }
+
+  .slick-prev {
+    left: -40px;
+  }
+
+  .slick-next {
+    right: -40px;
   }
 }
