Finalised Some Content

--- a/rami/src/pages/Home/Home.css
+++ b/rami/src/pages/Home/Home.css
@@ -15,10 +15,10 @@
   max-width: 800px;
 }
 
-.hero-content h1 {
+.hero-content h2 {
   font-size: 3rem;
   font-weight: bold;
-  color: #333; /* Changed to black */
+  color: #333;
 }
 
 .hero-content p {
@@ -38,8 +38,11 @@
   margin: 0 auto;
 }
 
+.facilities-container {
+  align-items: center;
+}
+
 .quote-section {
-  background-color: #fddde6; /* Pastel pink background */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,10 +54,11 @@
   align-items: center;
   max-width: 800px;
   padding: 40px;
-  background-color: #fff; /* White background for the box */
+  background-color: #fddde6;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 
 .profile-img {
   width: 100px;
@@ -80,6 +84,7 @@
   max-width: 100%;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 2px solid #333;
 }
 
 .tour video, .tour img {
@@ -147,25 +152,62 @@
   color: #a9a9a9;
 }
 
-.slick-prev, .slick-next {
+/* Custom Arrow Styling */
+.custom-arrow {
   width: 50px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.slick-prev:before, .slick-next:before {
+.custom-arrow:before {
   font-size: 20px;
-  color: white;
+  color: #333;
 }
 
-.slick-prev {
+.custom-arrow:hover {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.custom-arrow.next {
+  right: -60px;
+}
+
+.custom-arrow.prev {
   left: -60px;
 }
 
-.slick-next {
-  right: -60px;
+.carousel-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-item {
+  flex: 0 0 auto;
+  margin: 0 auto;
+}
+
+.carousel-item img {
+  border: 2px solid #333;
+}
+
+.facilities h2 {
+  color: #e53e3e;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.facilities p {
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 @media (max-width: 768px) {
@@ -190,20 +232,20 @@
     font-size: 0.875rem;
   }
 
-  .slick-prev, .slick-next {
+  .custom-arrow {
     width: 30px;
     height: 30px;
   }
 
-  .slick-prev:before, .slick-next:before {
+  .custom-arrow:before {
     font-size: 15px;
   }
 
-  .slick-prev {
-    left: -40px;
+  .custom-arrow.next {
+    right: -40px;
   }
 
-  .slick-next {
-    right: -40px;
+  .custom-arrow.prev {
+    left: -40px;
   }
 }
