--- a/rami/src/components/Navbar/Navbar.css
+++ b/rami/src/components/Navbar/Navbar.css
@@ -23,6 +23,10 @@
     text-decoration: none;
     color: inherit;
   }
+
+  .navbar .logo img {
+    height: 50px; /* Adjust the height to make the logo smaller */
+  }
   
   .navbar ul {
     list-style: none;
