--- a/rami/src/components/Navbar/Navbar.css
+++ b/rami/src/components/Navbar/Navbar.css
@@ -1,46 +1,45 @@
 .navbar {
-    position: relative;
-    z-index: 10;
-    transition: all 0.5s ease; /* Increase the transition duration for smoother effect */
-    background: transparent; /* Initial background is transparent */
-  }
-  
-  .navbar.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    /* background: rgba(255, 255, 255, 0.9); */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .navbar .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .navbar .logo a {
-    text-decoration: none;
-    color: inherit;
-  }
+  position: relative;
+  z-index: 10;
+  transition: all 0.5s ease; /* Increase the transition duration for smoother effect */
+  background: rgba(255, 255, 255, 0.8); /* Initial background with 80% opacity */
+}
 
-  .navbar .logo img {
-    height: 50px; /* Adjust the height to make the logo smaller */
-  }
-  
-  .navbar ul {
-    list-style: none;
-    display: flex;
-    gap: 1.5rem;
-  }
-  
-  .navbar ul li a {
-    text-decoration: none;
-    color: inherit;
-    transition: color 0.3s;
-  }
-  
-  .navbar ul li a:hover {
-    color: #ff6347; /* Change to your desired hover color */
-  }
-  
+.navbar.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.95); /* Background with 95% opacity when sticky */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar .logo a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar .logo img {
+  height: 50px; /* Adjust the height to make the logo smaller */
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s;
+}
+
+.navbar ul li a:hover {
+  color: #ff6347; /* Change to your desired hover color */
+}
