--- a/rami/src/pages/News/News1.css
+++ b/rami/src/pages/News/News1.css
@@ -1,6 +1,6 @@
 /* src/components/News1.css */
 .news1-page {
-  background: #D3EAF7;
+  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #3ABEFF);
   color: #333;
   padding: 120px 20px 40px; /* Adjusted padding to bring the content further down */
   font-family: Arial, sans-serif;
