--- a/rami/src/pages/RecentProjects/RecentProjects.css
+++ b/rami/src/pages/RecentProjects/RecentProjects.css
@@ -20,7 +20,7 @@
 /* Project Gallery */
 .project-gallery {
   padding: 6rem 0;
-  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #3ABEFF);
   text-align: center;
   width: 100%;
 }
