--- a/rami/src/components/Navbar/Navbar.css
+++ b/rami/src/components/Navbar/Navbar.css
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 .navbar .logo a {
@@ -26,6 +27,9 @@
 
 .navbar .logo img {
   height: 50px; /* Adjust the height to make the logo smaller */
+  /* border: 2px solid grey; /* Add black border */
+  /* border-radius: 8px; */
+  width: 100%;
 }
 
 .navbar ul {
