--- a/rami/src/pages/Home/Home.css
+++ b/rami/src/pages/Home/Home.css
@@ -20,6 +20,7 @@
 
 .home .intro-title {
   font-size: 4rem;
+  font-style:oblique;
   font-weight: bold;
   color: #333;
 }
@@ -28,6 +29,7 @@
   font-size: 3rem;
   color: #000;
   margin-top: 1rem;
+  font-style:oblique;
 }
 
 .home .logo-container {
