After-Review Changes

--- a/rami/src/components/Footer/Footer.css
+++ b/rami/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
 footer {
     padding: 20px;
     text-align: center;
-    background-color: #CFCCD6;
+    background-color: #A5A299;
     color: #333;
 }
 
