--- a/rami/src/pages/News/News.css
+++ b/rami/src/pages/News/News.css
@@ -1,8 +1,27 @@
 .news-page {
-    background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+  background-color: #CDCDCD !important; /* Changed from gradient to solid color */
     padding: 20px;
     font-family: Arial, sans-serif;
   }
+
+  /* Hero Section */
+.news-hero {
+  position: relative;
+  width: 100%;
+  height: 200px; /* Adjust the height of the hero section */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.news-hero h2 {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for text */
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
   
   .news-title {
     text-align: center;
@@ -19,7 +38,7 @@
   
   .project-section {
     text-align: center;
-    background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+    background-color: #CDCDCD !important; /* Changed from gradient to solid color */
     padding: 40px 0;
   }
 
@@ -27,7 +46,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #CFCCD6;
+    background-color: #E3E3E3;
     margin: 10px 0;
     padding: 20px;
     border-radius: 8px;
