--- a/rami/src/pages/RecentProjects/RecentProjects.css
+++ b/rami/src/pages/RecentProjects/RecentProjects.css
@@ -17,10 +17,29 @@
   border-radius: 5px;
 }
 
+/* Hero Section */
+.projects-hero {
+  position: relative;
+  width: 100%;
+  height: 200px; /* Adjust the height of the hero section */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects-hero h2 {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for text */
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
 /* Project Gallery */
 .project-gallery {
   padding: 6rem 0;
-  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #3ABEFF);
+  background-color: #CDCDCD !important; /* Changed from gradient to solid color */
   text-align: center;
   width: 100%;
 }
@@ -40,7 +59,7 @@
 /* Project Items */
 .project-item {
   margin-bottom: 4rem;
-  background-color: white;
+  background-color: #E3E3E3;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -59,6 +78,7 @@
   height: auto;
   display: block;
   margin: 0 auto 1rem auto;
+  max-width: 600px;
 }
 
 .project-item p {
@@ -96,7 +116,7 @@
 /* Other Research Section */
 .other-research {
   padding: 4rem 0;
-  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+  background-color: #CDCDCD !important; /* Changed from gradient to solid color */
   text-align: center;
 }
 
