--- a/rami/src/pages/Team/Team.css
+++ b/rami/src/pages/Team/Team.css
@@ -1,16 +1,36 @@
-.team-page {
+/* .team-page {
   font-family: 'Poppins', sans-serif;
-}
+} */
 
 .hero {
   text-align: center;
-  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+  background: linear-gradient(to right, #BCD8C1, #E2E8F0, #F56565);
   padding: 40px 0;
 }
 
+/* Hero Section */
+.team-hero {
+  position: relative;
+  width: 100%;
+  height: 200px; /* Adjust the height of the hero section */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-hero h2 {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for text */
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+
 .team-section {
   text-align: center;
-  background: linear-gradient(to right, #D3EAF7, #E2E8F0, #F56565);
+  background-color: #CDCDCD;
   padding: 40px 0;
 }
 
