--- a/rami/src/pages/Team/Team.css
+++ b/rami/src/pages/Team/Team.css
@@ -78,6 +78,14 @@
   margin-top: -5px;
 }
 
+/* Add border to FaUserAlt icon */
+.fa-user-alt-wrapper {
+  display: inline-block;
+  /* border: 2px solid #000;
+  border-radius: 50%; */
+  padding: 30px;
+}
+
 /* Navbar */
 .navbar {
   width: 100%;
