Added Abdulla's Changes

--- a/rami/src/pages/Home/Home.css
+++ b/rami/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
   background: linear-gradient(to right, #3ABEFF, #E2E8F0, #D3EAF7);
-  background-image: url('../../assets/banner6.png');
+  background-image: url('../../assets/final-banner.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
