--- a/rami/src/pages/Publications/Publications.css
+++ b/rami/src/pages/Publications/Publications.css
@@ -2,7 +2,7 @@
 .publications-hero {
     position: relative;
     width: 100%;
-    height: 200px; /* Adjust the height of the hero section */
+    height: 400px; /* Adjust the height of the hero section */
     background-size: cover;
     background-position: center;
     display: flex;
@@ -17,6 +17,19 @@
     border-radius: 5px;
     text-align: center;
 }
+
+.publications-container {
+    background-color: rgba(211, 211, 211, 0.8); /* Light grey background with some transparency */
+    padding: 20px; /* Add some padding to the container */
+    border-radius: 5px; /* Optional: add border-radius for rounded corners */
+    text-align: center; /* Center the text */
+    max-width: 600px; /* Adjust the width as needed */
+    margin: 0 auto; /* Center the container horizontally */
+  }
+  
+  .publications-container h3 {
+    margin: 0; /* Ensure no extra margin around the text */
+  }
 
 /* Publications Content */
 .publications-content {
