--- a/rami/src/pages/RecentProjects/RecentProjects.css
+++ b/rami/src/pages/RecentProjects/RecentProjects.css
@@ -21,7 +21,7 @@
 .projects-hero {
   position: relative;
   width: 100%;
-  height: 200px; /* Adjust the height of the hero section */
+  height: 400px; /* Adjust the height of the hero section */
   background-size: cover;
   background-position: center;
   display: flex;
@@ -34,6 +34,19 @@
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
+}
+
+.projects-container {
+  background-color: rgba(211, 211, 211, 0.8); /* Light grey background with some transparency */
+  padding: 20px; /* Add some padding to the container */
+  border-radius: 5px; /* Optional: add border-radius for rounded corners */
+  text-align: center; /* Center the text */
+  max-width: 600px; /* Adjust the width as needed */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+.projects-container h3 {
+  margin: 0; /* Ensure no extra margin around the text */
 }
 
 /* Project Gallery */
