--- a/rami/src/pages/Team/Team.css
+++ b/rami/src/pages/Team/Team.css
@@ -12,7 +12,7 @@
 .team-hero {
   position: relative;
   width: 100%;
-  height: 200px; /* Adjust the height of the hero section */
+  height: 400px; /* Adjust the height of the hero section */
   background-size: cover;
   background-position: center;
   display: flex;
@@ -25,6 +25,19 @@
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
+}
+
+.team-container {
+  background-color: rgba(211, 211, 211, 0.8); /* Light grey background with some transparency */
+  padding: 20px; /* Add some padding to the container */
+  border-radius: 5px; /* Optional: add border-radius for rounded corners */
+  text-align: center; /* Center the text */
+  max-width: 600px; /* Adjust the width as needed */
+  margin: 0 auto; /* Center the container horizontally */
+}
+
+.team-container h3 {
+  margin: 0; /* Ensure no extra margin around the text */
 }
 
 
